--- a/backend/src/VehicleMonitoring.Api/Dockerfile
+++ b/backend/src/VehicleMonitoring.Api/Dockerfile
@@ -1,22 +1,31 @@
-﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER $APP_UID
+﻿# Base image
+FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine AS base
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+# Build stage
+FROM mcr.microsoft.com/dotnet/sdk:8.0-alpine AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["src/VehicleMonitoring.Api/VehicleMonitoring.Api.csproj", "src/VehicleMonitoring.Api/"]
-RUN dotnet restore "src/VehicleMonitoring.Api/VehicleMonitoring.Api.csproj"
+
+# Copy the .csproj file and restore dependencies
+COPY ["VehicleMonitoring.Api/VehicleMonitoring.Api.csproj", "VehicleMonitoring.Api/"]
+RUN dotnet restore "VehicleMonitoring.Api/VehicleMonitoring.Api.csproj"
+
+# Copy the rest of the source code
 COPY . .
-WORKDIR "/src/src/VehicleMonitoring.Api"
+WORKDIR "/src/VehicleMonitoring.Api"
+
+# Build the project
 RUN dotnet build "VehicleMonitoring.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
+# Publish stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
 RUN dotnet publish "VehicleMonitoring.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
+# Final stage
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
