feat: added frontend app

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,14 +10,14 @@ services:
     ports:
       - 8080:8080
 
-  # vehicle-monitoring-frontend:
-  #   image: vehicle-monitoring-ui:local
-  #   container_name: vehicle-monitoring-ui
-  #   build:
-  #     context: .
-  #     dockerfile: ./frontend/Dockerfile
-  #   restart: always
-  #   depends_on:
-  #     - vehicle-monitoring-backend
-  #   ports:
-  #     - 4200:80
+  vehicle-monitoring-frontend:
+    image: vehicle-monitoring-ui:local
+    container_name: vehicle-monitoring-ui
+    build:
+      context: ./frontend
+      dockerfile: ./Dockerfile
+    restart: always
+    depends_on:
+      - vehicle-monitoring-backend
+    ports:
+      - 4200:80
